--- a/report/assignment.tex
+++ b/report/assignment.tex
@@ -4,7 +4,7 @@
 \usepackage{graphicx}
 \usepackage{subfigure}
 % Title portion
-\title{Assignment 4 : Global illumination using path tracing} 
+\title{Assignment 5 : Volume Rendering Using Ray-casting} 
 \author{Name:\quad 叶者  \\ student number:\quad 2018533140
 	\\email:\quad yezhe@shanghaitech.edu.cn}
 
